# sail-2025-optcg

./: .dockerignore  DOCKER_README.md  README.md  docker-compose.yml  example.env  nginx.conf  package-lock.json  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  test.ipynb  vectorstore_logic.py
backend/: .env.example  .gitignore  Dockerfile.backend  README.md  agent_eval.ipynb  example.env  pyproject.toml  requirements-dev.txt  requirements.txt  test.ipynb  test_state.json  test_state_hand.json
backend/src/optcg/: agents.py  api.py  models.py  prompts.py  schemas.py  state.py  tools.py  vectorstore_logic.py
backend/src/optcg/agents/: __init__.py  analysis_agent.py  board_assistant.py  graph.py  react.py  utils.py
backend/src/optcg/agents/analysis/: __init__.py  analysis_graph.py  analysis_prompts.py  analysis_schemas.py
backend/src/optcg/agents/react/: __init__.py  react_agents.py  react_prompts.py
backend/src/optcg/agents/tools/: __init__.py  get_board_tool.py  handoff_tool.py  rulebook_tool.py  unused_tools.py
backend/src/optcg/routes/: agent_routes.py  board_routes.py  card_routes.py
backend/src/optcg/tools/: __init__.py
frontend/: Dockerfile.frontend  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: CardFilterBar.tsx  deckbuilder.tsx
misc_notebooks/: sample_agent.ipynb  sample_openai_call.ipynb  sample_qa_agent.ipynb
models/: sample_agent.ipynb  sample_openai_call.ipynb
python-src/optcg/: agents.py  api.py  routes.py
